# pathwise

./: .air.toml  .env-template  .gcloudignore  .gitignore  .golangci.yml  .goreleaser.yaml  AGENTS.md  Dockerfile  Makefile  README.md  app.yaml  go.mod  go.sum  main.go  migrate.sh  sqlc.yml  tailwind.config.js  upgrade_htmx.sh  upgrade_templ.sh
auth/: auth.go
components/: add_job.templ  add_note.templ  alert.templ  archives.templ  drawer.templ  filter.templ  footer.templ  head.templ  header.templ  input_select.templ  jobs.templ  main.templ  note.templ  pagination.templ  paginations.templ  settings.templ  signin.templ  signup.templ  stats.templ  status_badge.templ  timeline.templ  update_job.templ
db/: database.go  file.go  local.go  remote.go  turso.go  url.go
e2e/: archive_test.go  e2e_test.go  export_test.go  home_test.go  note_test.go  pagination_test.go  salary_test.go  security_test.go  settings_test.go  signin_test.go  signout_test.go  signup_test.go  status_test.go  timeline_test.go
experiment/: .gitignore  Cargo.toml  README.md  build.rs  tailwind.config.js
experiment/assets/js/: ext-response-targets@1.9.10.min.js
experiment/migrations/: V1__init.sql
experiment/src/: main.rs
experiment/src/db/: mod.rs
experiment/templates/: alert.html  base.html  drawer.html  footer.html  header.html  signin.html  signup.html
handlers/: handler.go  jobs.go
k6/: script.js
logger/: logger.go
server/: server.go
types/: auth.go  currency.go  html.go  job.go  store.go  types.go
ui/: .goreleaser.yaml  Dockerfile  go.mod  main.go
utils/: crypto.go  id.go  (+8 more)
(+323 files in other folders)
