[package]
name = "rust-htmx-template"
version = "0.1.0"
edition = "2021"

[profile.release]
# https://github.com/johnthagen/min-sized-rust
strip = true
opt-level = "z"
lto = true
codegen-units = 1

[dependencies]
askama = {version = "0.12", features = ["with-axum", "mime", "mime_guess"]}
askama_axum = "0.4"
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["compression-full"] }
axum-embed = "0.1"
rust-embed = "8"
rusqlite = { version = "0.30", features = ["bundled"] }
tokio-rusqlite = "0.5"
refinery = {version = "0.8", features = ["rusqlite"]}
serde = { version = "1.0", features = ["derive"] }
